# libspagyrist

./: .gitignore  CMakeLists.txt  README-ja.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
cmake/: spagyristConfig.cmake.in
examples/: CMakeLists.txt  fixed_client.cpp
include/spagyrist/: candidate.hpp  candidate_text.hpp  cli.hpp  document.hpp  error.hpp  help.hpp  matcher.hpp  output.hpp  ranking.hpp  renderer.hpp  runtime.hpp  selector.hpp  spagyrist.hpp  validation.hpp  version.hpp
include/spagyrist/selector/: auto.hpp  builtin.hpp  fzf.hpp  number.hpp
src/: candidate.cpp  candidate_text.cpp  cli.cpp  document.cpp  help.cpp  matcher.cpp  ranking.cpp  runtime.cpp  validation.cpp  version.cpp
src/output/: editor.cpp  stdout.cpp
src/renderer/: markdown_renderer.cpp  plain_renderer.cpp  renderer.cpp  terminal_renderer.cpp
src/selector/: auto.cpp  builtin.cpp  builtin_state.cpp  builtin_view.cpp  builtin_view.hpp  fzf.cpp  number.cpp  selector.cpp  terminal.cpp  terminal.hpp
src/selector/builtin/: builtin.cpp  screen.cpp  state.cpp  state.hpp  terminal.cpp  terminal.hpp  utf8.cpp  utf8.hpp  view.cpp  view.hpp
src/selector/fzf/: executable.cpp  executable.hpp  format.cpp  format.hpp  fzf.cpp  process.cpp  process.hpp
src/selector/number/: number.cpp
tests/: CMakeLists.txt  test_builtin_state.cpp  test_builtin_view.cpp  test_candidate.cpp  test_candidate_text.cpp  test_cli.cpp  test_document.cpp  test_help.cpp  test_main.cpp  test_matcher.cpp  test_output.cpp  test_ranking.cpp  test_renderer.cpp  test_runtime.cpp  test_selector.cpp  test_support.hpp  test_terminal.cpp
